[tool.poetry]
name = "anova-ble"
version = "0.1.6"
description = ""
authors = ["ninjawarrior1337 <me@treelar.xyz>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ninjawarrior1337/anova_ble"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
bleak = "^0.21.1"
bleak-retry-connector = "^3.2.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
