[tool.poetry]
name = "anova-ble"
version = "0.1.6"
description = ""
authors = ["ninjawarrior1337 <me@treelar.xyz>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ninjawarrior1337/anova_ble"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
bleak = "^0.22.3"
bleak-retry-connector = "^3.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
